--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-progress": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
+    "@sentry/nextjs": "^9.12.0",
     "@types/react-countup": "^4.3.0",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
